# educational-tasks-c-python-2

./: README.md
AVS_KT1/: CMakeLists.txt
AVS_KT1/Headers/: container.h  flower.h  plant.h  random.h  shrub.h  tree.h
AVS_KT1/Source/: container.cpp  flower.cpp  main.cpp  plant.cpp  shrub.cpp  tree.cpp
AVS_KT1/Tests/: input1.txt  input2.txt  input4.txt
AVS_KT2/: CMakeLists.txt
AVS_KT2/Headers/: container.h  flower.h  plant.h  random.h  shrub.h  tree.h
AVS_KT2/Sources/: container.cpp  flower.cpp  main.cpp  plant.cpp  shrub.cpp  tree.cpp
AVS_KT3/: container.py  extender.py  flower.py  main.py  shrub.py  tree.py
AVS_KT3/Outputs/: output1.txt  output2.txt
AVS_KT3/Tests/: input3.txt
AVS_KT4/: CMakeLists.txt  data.h  extdata.h  input.c  inrnd.c  main.c  other.asm  other.c  outfile01.txt  outfile02.txt  output.c
AVS_KT4/Tests/: input2.txt  input3.txt
AVS_KT5/: CMakeLists.txt  initializator.h  main.cpp
